Use a message based TeamCityPlugin (#2638)