@@ -10,7 +10,7 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
@@ -24,6 +24,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -152,7 +153,7 @@ class IncrementingUuidGeneratorTest {
 
     private static void checkUuidProperties(List<UUID> uuids) {
         // all UUIDs are non-null
-        assertTrue(uuids.stream().filter(Objects::isNull).findFirst().isEmpty());
+        assertFalse(uuids.stream().anyMatch(Objects::isNull));
 
         // UUID version is always 8
         List<Integer> versions = uuids.stream().map(UUID::version).distinct().collect(Collectors.toList());
@@ -331,7 +332,7 @@ class IncrementingUuidGeneratorTest {
 
         private byte[] loadClassBytesFromDisk(String className) {
             try {
-                return Files.readAllBytes(Path.of(Objects.requireNonNull(NonCachingClassLoader.class
+                return Files.readAllBytes(Paths.get(Objects.requireNonNull(NonCachingClassLoader.class
                         .getResource(className.replaceFirst(".+\\.", "") + ".class")).toURI()));
             } catch (IOException e) {
                 throw new RuntimeException("Unable to read file from disk");
